Changed to use native js confirmation.

--- a/plugins/multiproject/multiproject/project/admin/templates/admin_vcm.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_vcm.html
@@ -28,8 +28,8 @@
             </py:for>
         </table>
         <p><input type="submit" value="Delete" id="delete_repositories_btn" 
-            class="confirm" 
-            alt="Are you sure you want to delete repository/repositories?"/>
+            alt="Are you sure you want to delete repository/repositories?"
+            onsubmit="return confirm('Are you sure you want to delete repository/repositories?')"/>
         </p>
     </form>
 </div>
