Changed the domain name away from the login screen.

--- a/plugins/multiproject/multiproject/common/users/templates/multiproject_login.html
+++ b/plugins/multiproject/multiproject/common/users/templates/multiproject_login.html
@@ -22,7 +22,7 @@ from multiproject.core.configuration import conf
   </head>
 
   <body>
-    <h1 id="fnloginHeader">Login to ${conf.domain_name}</h1>
+    <h1 id="fnloginHeader">Login to service</h1>
     <div class="halfWidth left">
       <div id="fnloginToForum">
         <form id="ssologin" method="post" action="${conf.url_home_path}/user" class="form">
