Fixed hardcoded server in email template & server name in local_user.py

--- a/plugins/multiproject/multiproject/home/admin/templates/local_account_created.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/local_account_created.html
@@ -5,4 +5,4 @@ Your password is: ${password}
 Your account is not activated until you agree on terms and conditions.
 Please visit https://${system} and login with your credentials as provided above.
 
-Note: This is only valid for local accounts created on collab.nokia.com
+Note: This is only valid for local accounts created on ${system}
