Deputies feature is now working.

--- a/plugins/multiproject/multiproject/home/admin/templates/admin_user_edit.html
+++ b/plugins/multiproject/multiproject/home/admin/templates/admin_user_edit.html
@@ -94,7 +94,7 @@
                                     <span class="deputy_username">
                                         ${deputy.username}
                                     </span>
-                                    <input type="button" class="remove_deputy" value="-" />
+                                    <span class="remove_deputy">-</span>
                                 </li>
                             </ul>
                             <p py:if="len(deputies) == 0" class="no-deputies">No deputies added</p>
