--- a/plugins/multiproject/multiproject/home/frontpage/templates/terms.html
+++ b/plugins/multiproject/multiproject/home/frontpage/templates/terms.html
@@ -13,7 +13,7 @@
     <body>
         <div id="content">
             <div>
-                <xi:include href="${conf.domain_name}_legal.html" />
+                <xi:include href="${domain}_legal.html" />
             </div>
         </div>
     </body>
