Fixes for ticket_1790, the backend logic didn't work as suspected.

--- a/plugins/multiproject/multiproject/common/users/templates/multiproject_legal.html
+++ b/plugins/multiproject/multiproject/common/users/templates/multiproject_legal.html
@@ -14,7 +14,7 @@
   <body>
     <div id="content">
         <div>
-            <xi:include href="${conf.domain_name}_legal.html" />
+            <xi:include href="${domain}_legal.html" />
         </div>
         
         <div class="wikipage searchable">
